Created and finished "create-cue"

--- a/review-done.html
+++ b/review-done.html
@@ -18,7 +18,7 @@
           <button class="btn btn-link float-right">Log out</button>
 
           <div
-            class="btn-group d-flex mb-5"
+            class="btn-group d-flex"
             role="navigation"
             aria-label="navigation"
           >
@@ -33,16 +33,15 @@
               All cards
             </button>
           </div>
+
+          <h2 class="text-muted text-center my-3">Out of cards</h2>
+
+          <button class="btn btn-link">Previous card</button>
+          <button class="btn btn-outline-primary float-right">
+            Get more cards
+          </button>
         </div>
       </div>
-
-      <div class="row d-flex justify-content-center">
-        <h2 class="text-muted">Out of cards</h2>
-      </div>
-
-      <div class="row d-flex justify-content-center">
-         <button class="btn btn-link mr-8 mt-5">Previous card</button>
-      <button class="btn btn-outline-primary ml-8 m-5">Get more cards</button>
     </div>
   </body>
 </html>
