finished "create-cue"

--- a/create-cue.html
+++ b/create-cue.html
@@ -80,7 +80,7 @@
           <button class="btn btn-link">Back to answer</button>
           <div class="float-right">
             <button
-              class="btn btn-primary btn-lg float-right"
+              class="btn btn-lg btn-primary float-right"
               id="save-imagery"
             >
               <img
