--- a/create-answer.html
+++ b/create-answer.html
@@ -2,85 +2,129 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./style/dist.css" />
-    <title>White Bear Start</title>
+    <link rel="stylesheet" href="/style/dist.css" />
+    <title>White Bear</title>
   </head>
-  <body>
-    <div
-      class="w-100 bg-success py-4 d-none justify-content-center fixed-top"
-      id="overlay-success"
-    >
-      <img src="/icons/success.svg" width="28px" style="margin-bottom: 5px;" />
-      <p class="lead">Card created!</p>
-    </div>
+  <!-- class for background image -->
+  <body class="background-image">
     <div class="container">
       <div class="row">
-        <div
-          class="col-12 col-xl-6 offset-xl-3 col-lg-8 offset-lg-2 col-md-10 offset-md-1"
-        >
-          <img src="images/logo-app.svg" width="32px;" alt="White Bear logo" />
+        <div class="col-12">
+          <div class="row">
+            <!-- top logo and name brand -->
 
-          <h3 class="d-inline text-brand">White Bear</h3>
+            <img
+              class="ml-3 mt-5 bearStar"
+              src="Images/logo-landing.png"
+              alt="white bear logo"
+            />
 
-          <button class="btn btn-link float-right">Log out</button>
-
-          <div
-            class="btn-group d-flex"
-            role="navigation"
-            aria-label="navigation"
-          >
-              <button
-              type="button"
-              class="btn btn-secondary tab-active"
-              >Create New
-              </button>
-
-                  <a
-                  href="index.html"
-                  type="button"
-                  class="btn btn-secondary"
-                  >
-                  Create New
-                  Review</a>
-                  </button>
-
-
-            <button type="button" class="btn btn-secondary tab-separator">
-              All cards
-            </button>
+            <h1 class="ml-3 mt-5" id="brandHeader">
+              White Bear
+            </h1>
           </div>
+          <!-- end top logo and name brand -->
+          <!-- sign up and welcome back cards -->
+          <div class="row landCards">
+            <div
+              class="offset-1 col-10 offset-sm-2 col-sm-8 offset-md-1 col-md-5 offset-lg-2 col-lg-4 offset-xl-1 col-xl-4"
+            >
+              <div class="card p-3 mb-5">
+                <h2 class="card-title">Nice to meet you</h2>
+                <p class="mb-5">Sign up for White Bear. Free forever</p>
 
-          <h4 class="my-4 text-center text-primary text-muted">
-            Add an answer
-          </h4>
+                <div class="d-none" id="upBar">
+                  <p class="mb-5 text-success">
+                    Let's get you signed up.
+                  </p>
 
-          <div class="mb-2">
-            <div class="card bg-primary">
-              <div class="card-body">
-                <textarea rows="11" class="d-sm-none"> </textarea>
-                <textarea rows="6" class="d-none d-sm-block"></textarea>
+                  <form>
+                    <div class="form-group">
+                      <label for="email">Email address</label>
+                      <input type="email" class="form-control" id="email_1" />
+                      <div class="invalid-feedback">
+                        Please enter email address
+                      </div>
+                    </div>
+
+                    <div class="form-group">
+                      <label for="password">Create a password</label>
+                      <input
+                        type="password"
+                        class="form-control"
+                        id="password_1"
+                        required
+                      />
+                      <div class="invalid-feedback">
+                        Please create password. Must be 9 characters
+                      </div>
+                    </div>
+
+                    <a
+                      id="letsGoIndex"
+                      href="create-answer.html"
+                      class="btn btn-success float-right btn-block btn-lg"
+                      >Let's go!</a
+                    >
+                  </form>
+                </div>
+                <!-- added car class while I was debugging used to toggle inputs for sign up-->
+                <a href="#" class="btn btn-success float-right w-100 car btn-lg"
+                  >Sign up</a
+                >
+              </div>
+            </div>
+            <div
+              class="offset-1 col-10 offset-sm-2 col-sm-8 offset-md-1 col-md-5 offset-lg-1 col-lg-4 offset-xl-1 col-xl-5"
+            >
+              <div class="card p-3 mb-5">
+                <h2 class="card-title">Welcome back</h2>
+                <p class="mb-5">
+                  Log in with your email address and password.
+                </p>
+
+                <form>
+                  <div class="form-group">
+                    <label for="email">Email address</label>
+                    <input type="email" class="form-control" id="email_2" />
+                    <div class="invalid-feedback">
+                      Please enter email address
+                    </div>
+                  </div>
+                  <div class="form-group">
+                    <label for="password">Password</label>
+                    <input
+                      type="password"
+                      class="form-control"
+                      id="password_2"
+                    />
+                    <div class="invalid-feedback">
+                      Please enter password. Must be 9 characters
+                    </div>
+                  </div>
+                  <!-- Welcome back login button -->
+                  <a
+                    id="loginPage"
+                    href="create-answer.html"
+                    class="btn btn-success float-right"
+                    >Log in</a
+                  >
+                </form>
               </div>
             </div>
           </div>
-          <!-- ^End of "m-5" -->
-
-          <p class="float-right mb-5">0/240</p>
-
-          <div class="clearfix"></div>
-
-          <div class="float-right">
-            <button class="btn btn-lg btn-outline-primary float-right">
-              Next
-            </button>
-          </div>
         </div>
       </div>
+      <!--end row div-->
     </div>
+    <!--end container div-->
   </body>
+  <!-- jQuery CDN -->
   <script
     src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"
     defer
   ></script>
-  <script src="sript.js" defer></script>
-  "
+
+  <!-- my scripts -->
+  <script src="script.js" defer></script>
 </html>
