--- a/index.html
+++ b/index.html
@@ -8,39 +8,52 @@
   <body class="background-image">
     <div class="container">
       <div class="row">
-        <!-- Header -->
-        <img src="images/logo-landing.png" />
-        <h1 class="index-logo">White Bear</h1>
-      </div>
-
-      <!-- First card -->
-      <div class="row">
-        <div class="col-6">
-          <div class="card">
-            <h2>Nice to meet you</h2>
-              <p>Sign up for White Bear. Free forever</p>
-                <p>Lets get you signed up.</p>
-                  <form>
-                  <div class="form-group">
-                    <label for="email">Email address</label>
-                  <input
-                  type="email"
-                  class="form-control"
-                  id="email-1"
-                      />
-                <div class="form-group">
-                <label for="password">Create a password</label>
-                <input
-                type="password"
-                class="form-control"
-              id="password-1"
-              require/></form>               
+        
+          <div class="row mt-5">
+              <img src="images/logo-landing.png" />
+              <h1 class="index-logo">White Bear</h1>
+            </div><!-- End of header-->
+            <!-- Start of Card -->
+            <div class="row card-index">
+              <div class="col-xl-5 offset-xl-">
+              <div class="card">
+                <div class="card-body landing-text">
+                  <h2 class="card-title">Nice to meet you</h2>
+                  <p class="mb-3">Sign up for White Bear. Free forever.</p>
+                  <p class="mb-4">Let's get you signd up</p>
+                  <form class="form-group">
+                  <label
+                  for="email">Email Address</label>
+                  <input class="form-control" type="email" id="email" name="email"/>
+                  <label
+                  for="password">Password</label>
+                  <input class="form-control mb-3" type="password" id="password" name="password"/>
+                  <button class="btn btn-outline-success float-right">Lets go!</button>
+                  </form>
+                  </div>
+                </div>
+              </div>
+              <div class="col-xl-5 offset-xl-1">
+                <div class="card mb-5">
+                  <div class="card-body landing-text">
+                    <h2 class="card-title">Welcome Back</h2>
+                    <p>Log-in with your email address and password</p>
+                    <form class="form-group">
+                    <label
+                    for="email">Email Address</label>
+                    <input class="form-control" type="email" id="email" name="email"/>
+                    <label
+                    for="password">Password</label>
+                    <input class="form-control mb-3" type="password" id="password" name="password"/>
+                    <button class="btn btn-outline-success float-right">Log in</button>
+                    </form>
+                    </div>
+                  </div>
+                </div>
+            </div>
           </div>
-        </div>
+        
       </div>
-    </div>
-
-      <!-- Second card -->
     </div>
   </body>
   <script
