--- a/index.html
+++ b/index.html
@@ -15,37 +15,40 @@
             </div><!-- End of header-->
             <!-- Start of Card -->
             <div class="row card-index">
-              <div class="col-xl-5 offset-xl-">
-              <div class="card">
+              <div class="col-xl-5 offset-xl-1 col-sm-8 col-lg-8 offset-4 offset-sm-2 offset-md-2 col-10 offset-1">
+              <div class="card mb-5">
                 <div class="card-body landing-text">
                   <h2 class="card-title">Nice to meet you</h2>
                   <p class="mb-3">Sign up for White Bear. Free forever.</p>
-                  <p class="mb-4">Let's get you signd up</p>
-                  <form class="form-group">
-                  <label
+                  <p id="sign-up"
+                   class="text-success mb-4">Let's get you signed up</p>
+                   <!-- Start of toggle -->
+                  <form id="form-toggle"
+                  class="form-group d-none">
+                  <label class="text-muted"
                   for="email">Email Address</label>
                   <input class="form-control" type="email" id="email" name="email"/>
-                  <label
+                  <label class="text-muted"
                   for="password">Password</label>
                   <input class="form-control mb-3" type="password" id="password" name="password"/>
-                  <button class="btn btn-outline-success float-right">Lets go!</button>
+                  <button class="btn btn-success btn-block float-right">Lets go!</button>
                   </form>
                   </div>
                 </div>
               </div>
-              <div class="col-xl-5 offset-xl-1">
+              <div class="col-xl-5 offset-xl-1 col-sm-8 col-lg-8 offset-sm-2 col-10 offset-1">
                 <div class="card mb-5">
                   <div class="card-body landing-text">
                     <h2 class="card-title">Welcome Back</h2>
-                    <p>Log-in with your email address and password</p>
+                    <p class="mb-3">Log-in with your email address and password.</p>
                     <form class="form-group">
-                    <label
+                    <label class="text-muted"
                     for="email">Email Address</label>
                     <input class="form-control" type="email" id="email" name="email"/>
-                    <label
+                    <label class="text-muted"
                     for="password">Password</label>
                     <input class="form-control mb-3" type="password" id="password" name="password"/>
-                    <button class="btn btn-outline-success float-right">Log in</button>
+                    <button class="btn btn-success float-right">Log in</button>
                     </form>
                     </div>
                   </div>
