--- a/index.html
+++ b/index.html
@@ -8,12 +8,11 @@
   <body class="background-image">
     <div class="container">
       <div class="row">
-        
           <div class="row mt-5">
               <img src="images/logo-landing.png" />
               <h1 class="index-logo">White Bear</h1>
             </div><!-- End of header-->
-            <!-- Start of Card -->
+            <!-- Start of 1st card -->
             <div class="row card-index">
               <div class="col-xl-5 offset-xl-1 col-sm-8 col-lg-8 offset-4 offset-sm-2 offset-md-2 col-10 offset-1">
               <div class="card mb-5">
@@ -36,6 +35,7 @@
                   </div>
                 </div>
               </div>
+              <!-- Start of 2nd card -->
               <div class="col-xl-5 offset-xl-1 col-sm-8 col-lg-8 offset-sm-2 col-10 offset-1">
                 <div class="card mb-5">
                   <div class="card-body landing-text">
