--- a/all-cards.html
+++ b/all-cards.html
@@ -65,10 +65,10 @@
                 </div>
                 <div class="col-8">
                 <select class="custom-select" id="inputGroupSelect01">
-                <option selected>Choose...</option>
-                <option value="1">One</option>
-                <option value="2">Two</option>
-                <option value="3">Three</option>
+                <option selected>Most recent</option>
+                <option value="1">Oldest</option>
+                <option value="2">Hardest</option>
+                <option value="3">Easiest</option>
                 </select>
               </div>  
             </div>
