Added hover feature

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                   <h2 class="card-title">Nice to meet you</h2>
                   <p class="mb-3">Sign up for White Bear. Free forever.</p>
                   <p id="sign-up"
-                   class="text-success mb-4">Let's get you signed up</p>
+                   class="pointer text-success mb-4">Let's get you signed up</p>
                    <!-- Start of toggle -->
                   <form id="form-toggle"
                   class="form-group d-none">
