linked index and create-answer pages

--- a/create-cue.html
+++ b/create-cue.html
@@ -7,13 +7,22 @@
   </head>
   <body>
     <div
-      class="w-100 bg-danger py-4 d-none justify-content-center fixed-top"
+      class="w-100 bg-success py-4 d-none justify-content-center fixed-top"
       id="overlay-success"
     >
-      <img src="/icons/error.svg" width="28px" style="margin-bottom: 5px;" />
-      <p class="lead">Oops! Our bad. Please try again</p>
-    </div>
-    <div class="container">
+      <img src="/icons/success.svg" width="28px" style="margin-bottom: 5px;" />
+      <p class="lead">Card created!</p>
+    </div><!-- End of success banner -->
+    
+    <div
+    class="w-100 bg-danger py-4 d-none justify-content-center fixed-top"
+    id="overlay-error"
+  > 
+    <img src="/icons/error.svg" width="28px" style="margin-bottom: 5px;" />
+    <p class="lead">Oops! our bad. Please try again</p>
+  </div> <!-- End of error banner -->
+    
+  <div class="container">
       <div class="row">
         <div
           class="col-12 col-xl-6 offset-xl-3 col-lg-8 offset-lg-2 col-md-10 offset-md-1"
@@ -22,31 +31,30 @@
 
           <h3 class="d-inline text-brand">White Bear</h3>
 
-          <button class="btn btn-link float-right">Log out</button>
+          <a href="index.html" class="btn btn-link float-right">Log out</a>
 
           <div
             class="btn-group d-flex"
             role="navigation"
             aria-label="navigation"
           >
-              <button
+              <a href="create-answer.html"
               type="button"
               class="btn btn-secondary tab-active"
               >
               Create New
-              </button>
+      </a>
 
                 <a
-                href="index.html"
+                href="review-answer.html"
                 type="button"
                 class="btn btn-secondary"
                 >
-            Create New
               Review</a>
             </button>
-            <button type="button" class="btn btn-secondary tab-separator">
+            <a href="all-cards.html" type="button" class="btn btn-secondary tab-separator">
               All cards
-            </button>
+            </a>
           </div>
 
           <h4 class="my-4 text-center text-primary text-muted">
@@ -77,7 +85,7 @@
 
           <div class="clearfix"></div>
 
-          <button class="btn btn-link">Back to answer</button>
+          <button id="back2-answer" class="btn btn-link">Back to answer</button>
           <div class="float-right">
             <button
               class="btn btn-lg btn-primary float-right"
