--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
                     <label class="text-muted"
                     for="password">Password</label>
                     <input class="form-control mb-3" type="password" id="password" name="password"/>
-                    <button class="btn btn-success float-right">Log in</button>
+                    <a href="create-answer.html"
+                     class="btn btn-success float-right">Log in</a>
                     </form>
                     </div>
                   </div>
