--- a/create-answer.html
+++ b/create-answer.html
@@ -22,7 +22,7 @@
 
           <h3 class="d-inline text-brand">White Bear</h3>
 
-          <button class="btn btn-link float-right">Log out</button>
+          <a href="index.html" class="btn btn-link float-right">Log out</a>
 
           <div
             class="btn-group d-flex"
@@ -37,16 +37,15 @@
               </button>
 
                 <a
-                href="index.html"
+                href="review-answer.html"
                 type="button"
                 class="btn btn-secondary"
                 >
-            Create New
               Review</a>
             </button>
-            <button type="button" class="btn btn-secondary tab-separator">
+            <a href="all-cards.html" type="button" class="btn btn-secondary tab-separator">
               All cards
-            </button>
+            </a>
           </div>
 
           <h4 class="my-4 text-center text-primary text-muted">
@@ -63,16 +62,15 @@
           </div>
           <!-- ^End of "m-5" -->
 
-          <p class="float-right mb-5">0/240</p>
-
           <div class="clearfix"></div>
+          
 
           <div class="float-right">
-            <button
+            <a href="create-cue.html"
               class="btn btn-lg btn-outline-primary float-right"
-              id="save-imagery"
+              
             >Next
-            </button>
+          </a>
           </div>
         </div>
       </div>
