--- a/review-answer.html
+++ b/review-answer.html
@@ -15,23 +15,29 @@
 
           <h3 class="d-inline text-brand">White Bear</h3>
 
-          <button class="btn btn-link float-right">Log out</button>
+          <a href="index.html" class="btn btn-link float-right">Log out</a>
 
           <div
             class="btn-group d-flex mb-5"
             role="navigation"
             aria-label="navigation"
           >
-            <button type="button" class="btn btn-secondary">Create New</button>
+            <a href="create-answer.html" type="button" class="btn btn-secondary"
+              >Create New</a
+            >
             <button
               type="button"
               class="btn btn-secondary tab-separator tab-active"
             >
               Review
             </button>
-            <button type="button" class="btn btn-secondary tab-separator">
+            <a
+              href="all-cards.html"
+              type="button"
+              class="btn btn-secondary tab-separator"
+            >
               All cards
-            </button>
+            </a>
           </div>
           <div class="mb-5">
             <div class="card bg-primary">
@@ -58,15 +64,17 @@
 
           <button class="btn btn-link">Edit</button>
           <div class="float-right">
-            <button class="btn btn-outline-primary mr-4">Needs work</button>
-            <button class="btn btn-primary">
+            <a href="review-done.html" class="btn btn-outline-primary mr-4"
+              >Needs work</a
+            >
+            <a href="review-done.html" class="btn btn-primary">
               <img
                 src="/icons/thumbs-up.svg"
                 width="20px"
                 style="margin-bottom: 5px;"
               />
               Got it
-            </button>
+            </a>
           </div>
         </div>
       </div>
