--- a/review-cue.html
+++ b/review-cue.html
@@ -25,7 +25,7 @@
           <button class="btn btn-link float-right">Log out</button>
 
           <div
-            class="btn-group d-flex"
+            class="btn-group d-flex mb-5"
             role="navigation"
             aria-label="navigation"
           >
@@ -41,7 +41,6 @@
                 type="button"
                 class="btn btn-secondary"
                 >
-            Create New
               Review</a>
             </button>
             <button type="button" class="btn btn-secondary tab-separator">
@@ -49,19 +48,8 @@
             </button>
           </div>
 
-          <h4 class="my-4 text-center text-primary text-muted">
-            Add memorable imagery
-          </h4>
-
           <div class="mb-2">
-            <div class="card bg-primary">
-              <div class="card-body">
-                <textarea rows="11" class="d-sm-none"> </textarea>
-                <textarea rows="6" class="d-none d-sm-block"></textarea>
-              </div>
-            </div>
-
-            <div class="card bg-secondary">
+            <div class="card bg-primary mb-5">
               <div class="card-body">
                 One morning, when Gregor Samsa woke from troubled dreams, he
                 found himself transformed in his bed into a horrible vermin. He
@@ -73,22 +61,12 @@
           </div>
           <!-- ^End of "m-5" -->
 
-          <p class="float-right mb-5">0/240</p>
-
           <div class="clearfix"></div>
 
-          <button class="btn btn-link">Back to answer</button>
+          <button class="btn btn-link">Previous card</button>
           <div class="float-right">
-            <button
-              class="btn btn-lg btn-primary float-right"
-              id="save-imagery"
-            >
-              <img
-                src="/icons/save.svg"
-                width="20px"
-                style="margin-bottom: 5px;"
-              />
-              Save
+            <button class="btn btn-outline-primary float-right">
+              Show answer
             </button>
           </div>
         </div>
