Linked all pages

--- a/all-cards.html
+++ b/all-cards.html
@@ -29,22 +29,21 @@
             role="navigation"
             aria-label="navigation"
           >
-              <button
+              <a href="create-answer.html"
               type="button"
-              class="btn btn-secondary tab-active"
+              class="btn btn-secondary"
               >
               Create New
-              </button>
+      </a>
 
                 <a
-                href="index.html"
+                href="review-cue.html"
                 type="button"
                 class="btn btn-secondary"
                 >
-            Create New
               Review</a>
             </button>
-            <button type="button" class="btn btn-secondary tab-separator">
+            <button type="button" class="btn btn-secondary tab-separator tab-active">
               All cards
             </button>
           </div> <!-- End of header buttons -->
@@ -86,10 +85,10 @@
                     </div>
                   </div>
                 </div>
-                  <div class="col-2">
+                  <a href="edit.html" class="btn btn-link col-2">
                   <img src="/icons/edit.svg"
                   width="20px"/>Edit
-                  </div>
+                  </a>
               </div> <!-- End of card -->
 
                 <div class="row">
@@ -104,10 +103,10 @@
                       </div>
                     </div>
                   </div>
-                    <div class="col-2">
+                    <a href="edit.html" class="btn btn-link col-2">
                     <img src="/icons/edit.svg"
                     width="20px"/>Edit
-                    </div>
+                    </a>
                   </div>
           <!-- ^End of "m-5" -->
 
