--- a/edit.html
+++ b/edit.html
@@ -31,7 +31,7 @@
           >
               <button
               type="button"
-              class="btn btn-secondary tab-active"
+              class="btn btn-secondary"
               >
               Create New
               </button>
@@ -44,7 +44,7 @@
             Create New
               Review</a>
             </button>
-            <button type="button" class="btn btn-secondary tab-separator">
+            <button type="button" class="btn btn-secondary tab-separator tab-active">
               All cards
             </button>
           </div>
@@ -77,9 +77,9 @@
 
           <div class="clearfix"></div>
 
-          <button class="btn btn-link">Discards changes</button>
+          <a href="all-cards.html" class="btn btn-link">Discards changes</a>
           <div class="float-right">
-            <button
+            <a href="all-cards.html"
               class="btn btn-lg btn-primary float-right"
               id="save-imagery"
             >
@@ -89,7 +89,7 @@
                 style="margin-bottom: 5px;"
               />
               Save
-            </button>
+          </a>
           </div>
                 <!-- Card properties -->
                 <h4 class="my-4 mb-5 text-center text-primary text-muted">Card properties</h4>
