--- a/review-answer.html
+++ b/review-answer.html
@@ -62,7 +62,7 @@
           </div>
           <!-- ^End of "m-5" -->
 
-          <button class="btn btn-link">Edit</button>
+          <a href="edit.html" class="btn btn-link">Edit</a>
           <div class="float-right">
             <a href="review-done.html" class="btn btn-outline-primary mr-4"
               >Needs work</a
