--- a/review-done.html
+++ b/review-done.html
@@ -22,24 +22,24 @@
             role="navigation"
             aria-label="navigation"
           >
-            <button type="button" class="btn btn-secondary">Create New</button>
-            <button
+            <a href="create-answer.html" type="button" class="btn btn-secondary">Create New</a>
+            <a href="review-answer.html"
               type="button"
               class="btn btn-secondary tab-separator tab-active"
             >
               Review
-            </button>
-            <button type="button" class="btn btn-secondary tab-separator">
+      </a>
+            <a href="all-cards.html" type="button" class="btn btn-secondary tab-separator">
               All cards
-            </button>
+            </a>
           </div>
 
           <h2 class="text-muted text-center my-3">Out of cards</h2>
 
-          <button class="btn btn-link">Previous card</button>
-          <button class="btn btn-outline-primary float-right">
+          <a href="review-answer.html" class="btn btn-link">Previous card</button>
+          <a href="review-cue.html" class="btn btn-outline-primary float-right">
             Get more cards
-          </button>
+          </a>
         </div>
       </div>
     </div>
