--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./style/dist.css" />
+    <link rel="stylesheet" href="/Style/dist.css" />
     <title>White Bear</title>
   </head>
   <body class="background-image">
