--- a/all-cards.html
+++ b/all-cards.html
@@ -2,7 +2,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./style/dist.css" />
+    <link rel="stylesheet" href="/style/dist.css" />
     <title>White Bear Start</title>
   </head>
   <body>
