Added button hide to index

--- a/index.html
+++ b/index.html
@@ -18,19 +18,20 @@
               <div class="card mb-5">
                 <div class="card-body landing-text">
                   <h2 class="card-title">Nice to meet you</h2>
-                  <p class="mb-3">Sign up for White Bear. Free forever.</p>
-                  <p id="sign-up"
-                   class="pointer text-success mb-4">Let's get you signed up</p>
+                  <p class="mb-2">Sign up for White Bear.</p> 
+                  <p class="mb-3">Free forever.</p>
+                  <button id="sign-up"
+                   class="btn btn-block btn-success mb-4">Let's get you signed up</button>
                    <!-- Start of toggle -->
                   <form id="form-toggle"
                   class="form-group d-none">
                   <label class="text-muted"
                   for="email">Email Address</label>
-                  <input class="form-control" type="email" id="email" name="email"/>
+                  <input class="form-control" type="email" id="emailCreate" name="email"/>
                   <label class="text-muted"
                   for="password">Password</label>
                   <input class="form-control mb-3" type="password" id="password" name="password"/>
-                  <button class="btn btn-success btn-block float-right">Lets go!</button>
+                  <button id="letsGo" class="btn btn-success btn-block float-right">Lets go!</button>
                   </form>
                   </div>
                 </div>
